<resources>
    <string name="app_name">DK播放器</string>
    <string name="float_window_warning">当前无权限使用悬浮窗，请授权！</string>
    <string name="error_message">出了点小问题，稍后重试</string>
    <string name="retry">重    试</string>
    <string name="continue_play">继续播放</string>
    <string name="wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="lock_tip">请先解锁屏幕！</string>
    <string name="unlocked">已解锁</string>
    <string name="locked">已锁定</string>
    <string name="replay">重新播放</string>
    <string name="str_api">API演示</string>
    <string name="str_list">列表播放</string>
    <string name="str_extend">扩展功能</string>
    <string name="str_pip">画中画</string>
    <string name="str_other">其他:</string>
    <string name="str_play">播放</string>
    <string name="str_video_type">视频类型:</string>
    <string name="str_vod">点播</string>
    <string name="str_live">直播</string>
    <string name="str_api_vod">点播</string>
    <string name="str_api_live">直播</string>
    <string name="str_rtsp_concat">rtsp和concat分段视频演示</string>
    <string name="str_definition">清晰度切换</string>
    <string name="str_screen_shot">截图</string>
    <string name="str_raw_or_assets">播放Raw或Assets</string>
    <string name="str_multi_player">多播放器同时播放</string>
    <string name="str_list_view">ListView</string>
    <string name="str_recycler_view">RecyclerView</string>
    <string name="str_auto_play_recycler_view">自动播放的RecyclerView</string>
    <string name="str_list_fragment_viewpager">列表、Fragment和ViewPager组合demo</string>
    <string name="str_rotate_in_fullscreen">全屏手动旋转demo</string>
    <string name="str_tiktok_1">抖音 (RecyclerView)</string>
    <string name="str_tiktok_2">抖音 (VerticalViewPager)</string>
    <string name="str_fullscreen_directly">直接进入全屏播放</string>
    <string name="str_danmu">弹幕</string>
    <string name="str_ad">广告</string>
    <string name="str_extend_rotate_in_fullscreen">全屏手动旋转demo</string>
    <string name="str_pip_demo">画中画</string>
    <string name="str_pip_in_list">列表滑动进入画中画</string>
    <string name="str_pip_android_o">Android 8.0 画中画demo</string>
    <string name="str_switch_player">多播放器切换</string>
    <string name="str_start_pip">悬浮窗</string>
    <string name="str_cache">缓存</string>
    <string name="str_play_list">连续播放一个列表</string>
    <string name="str_switch_player_btn">切换播放核心</string>
    <string name="str_current_player">当前播放核心是：</string>
</resources>
