<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipToVodPlayer"
        android:text="@string/str_api_vod" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipToLivePlayer"
        android:text="@string/str_api_live" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipToConcatPlay"
        android:text="@string/str_rtsp_concat" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipToDefinitionPlayer"
        android:text="@string/str_definition" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="skipToRawOrAssets"
        android:text="@string/str_raw_or_assets" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="multiPlayer"
        android:text="@string/str_multi_player" />
</LinearLayout>