<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startFullScreen"
        android:text="@string/str_fullscreen_directly" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="danmaku"
        android:text="@string/str_danmu" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ad"
        android:text="@string/str_ad" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="rotateInFullscreen"
        android:text="@string/str_extend_rotate_in_fullscreen" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="switchPlayer"
        android:text="@string/str_switch_player" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cache"
        android:text="@string/str_cache" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="playList"
        android:text="@string/str_play_list"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pad"
        android:text="pad"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="customPlayer"
        android:text="自定义MediaPlayer"/>

</LinearLayout>