<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="api"
                android:text="@string/str_api" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="list"
                android:text="@string/str_list" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="extend"
                android:text="@string/str_extend" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pip"
                android:text="@string/str_pip" />
            <TextView
                android:id="@+id/curr_player"
                android:layout_width="match_parent"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_height="50dp" />
        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearUrl"
            android:text="@string/str_other" />

        <EditText
            android:id="@+id/et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playOther"
            android:text="@string/str_play" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_video_type" />

        <RadioButton
            android:id="@+id/vod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/str_vod" />

        <RadioButton
            android:id="@+id/live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_live" />

    </RadioGroup>

</LinearLayout>