<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="list"
        android:text="@string/str_list_view" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="recycler"
        android:text="@string/str_recycler_view" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="recyclerAutoPlay"
        android:text="@string/str_auto_play_recycler_view" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="listFragmentViewPager"
        android:text="@string/str_list_fragment_viewpager" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="rotateInFullscreen"
        android:text="@string/str_rotate_in_fullscreen" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="tikTok"
        android:text="@string/str_tiktok" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="seamlessPlay"
        android:text="无缝衔接" />

</LinearLayout>