<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_vod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_api_vod" />
    <Button
        android:id="@+id/btn_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_api_live" />
    <Button
        android:id="@+id/btn_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_api_music" />
    <Button
        android:id="@+id/btn_raw_assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/str_raw_or_assets" />
    <Button
        android:id="@+id/btn_parallel_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/str_multi_player" />
</LinearLayout>