<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pip"
        android:text="@string/str_pip_demo" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pipInList"
        android:text="@string/str_pip_in_list" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pipAndroidO"
        android:text="@string/str_pip_android_o" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="tinyScreen"
        android:text="列表滑动进入小屏" />
</LinearLayout>