<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_pip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_pip_demo" />
    <Button
        android:id="@+id/btn_pip_in_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_pip_in_list" />

    <Button
        android:id="@+id/btn_pip_android_o"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_pip_android_o" />

    <Button
        android:id="@+id/btn_tiny_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="列表滑动进入小屏" />
</LinearLayout>